# test-qtcreator-qt6.8.3-cmake

./: .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  编译方法.md
.github/workflows/: ci-ubuntu.yml  ci-win10-mingw.yml  qt.yml  win-mingw.yml
FluentWinUI3_test/: CMakeLists.txt  main.cpp  main.qml
GenerateMdTitle/: CMakeLists.txt  generatemdtitle.cpp  generatemdtitle.h  main.cpp  main.qml
GenerateMdTitle_qt5/: GenerateMdTitle.cpp  GenerateMdTitle.h  GenerateMdTitle.qrc  GenerateMdTitle.rc  GenerateMdTitle.ui  GenerateMdTitle.vcxproj  GenerateMdTitle.vcxproj.filters  main.cpp  resource.h
build_mingw/: CMakeCache.txt
material_test/: CMakeLists.txt  main.cpp  main.qml
musicbox/: CMakeLists.txt  export_image.cpp  mainwindow.cpp  mainwindow.h  music_point.cpp  music_window.h  res.qrc
mytest_action/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
mytest_github_theme_myobject/: CMakeLists.txt  light.qss  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
mytest_minimize/: CMakeLists.txt  main.cpp
wangyiyun_music/: CMakeLists.txt  image.qrc  main.cpp  main.qml
wangyiyun_music/basic/: BasicConfig.qml  qmldir
wangyiyun_music/components/: SearchRow.qml
wangyiyun_music/pages/: AGiaoMusicMainWindows.qml  BottomPage.qml  LeftPage.qml  LoginPopupByOtherMeansPage.qml  LoginPopupPage.qml  PlayMusicPage.qml  RightPage.qml
wangyiyun_music/pages/RightPage/: CherryPickPage.qml  RightPage.qml  SettingsPage.qml  TopTitle.qml
wangyiyun_music_test/: CMakeLists.txt  image.qrc  main.cpp  main.qml
wangyiyun_music_test/basic/: AppSingleton.qml  qmldir
wangyiyun_music_test/components/: DataReceiver.qml
wangyiyun_music_test_1/: CMakeLists.txt  main.cpp
新项目生成器(由mytest_template_for_auto_create_new_project编译)/mytest_template_for_auto_copy/: CMakeLists.txt  main.cpp
